# skalp

./: .gitignore  ADVANCED_FEATURES.md  BLOCK_EXPRESSION_BUG_INVESTIGATION.md  BUG_75_METHOD_CALL_FIELD_ACCESS_CONFUSION.md  BUG_76_PROGRESS.md  BUG_76_TUPLE_WIDTH.md  BUG_8_CONCATENATION_WIDTH_INFERENCE.md  BUG_9_STRUCT_FIELD_BINARY_OPERATIONS.md  BUG_ANALYSIS_MATCH_ARM_DROPPING.md  BUG_FIXES_SUMMARY.md  BUG_FUNCTION_INLINING_VARIABLE_RESOLUTION.md  BUG_METAL_ARRAY_FIELD_ACCESS.md  BUG_METAL_BACKEND_TYPE_SYSTEM.md  BUG_NESTED_IF_RETURN_FIXES.md  CHANGELOG.md  CLAUDE.md  CLI_WORKFLOW_COMPLETE.md  CONTRIBUTING.md  CORRECTED_GPU_ASSESSMENT.md  Cargo.toml  FINAL_FIXED_STATUS.md  GETTING_STARTED_IMPLEMENTATION.md  GRAPHICS_PIPELINE_STATUS.md  HONEST_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PLAN.md  KARYTHRA_STATUS_REPORT.md  KNOWN_ISSUES.md  LICENSE  PARAMETRIC_TYPES_README.md  PERFORMANCE_OPTIMIZATION.md  PHASE_11_COMPLETION.md  PHASE_12_PIPELINE_COMPLETE.md  PHASE_12_PLAN.md  PHASE_12_WEEK1_COMPLETE.md  PHASE_1_DETAILED.md  PHASE_4_COMPLETION.md  PHASE_5_PLAN.md  PROGRESS_TRACKER.md  (+40 more)
benches/: README.md  (+3 more)
crates/skalp-asic/: Cargo.toml
crates/skalp-asic/src/: cts.rs  cts_manual.rs  drc.rs  floorplan.rs  gdsii.rs  incremental.rs  interactive.rs  lib.rs  placement.rs  routing.rs  routing_guide.rs  rts.rs  sdc.rs  sky130.rs  timing.rs  visualization.rs  web_ui.rs
crates/skalp-backends/: Cargo.toml
crates/skalp-backends/examples/: backend_demo.rs
crates/skalp-backends/src/: asic.rs  constraint_gen.rs  constraints.rs  fpga.rs  intel.rs  lib.rs  power.rs  timing.rs  verilog.rs  xilinx.rs
crates/skalp-codegen/: Cargo.toml
crates/skalp-codegen/src/: lib.rs  systemverilog.rs
crates/skalp-formal/: Cargo.toml
crates/skalp-formal/src/: arithmetic_solver.rs  assertions.rs  bmc.rs  ec_report.rs  equivalence.rs  lib.rs  model_checker.rs  property.rs  sat_solver.rs  smt.rs  temporal.rs
crates/skalp-frontend/: Cargo.toml
crates/skalp-frontend/src/: ast.rs  const_eval.rs  diagnostic_render.rs  formatter.rs  generics.rs  hir.rs  hir_builder.rs  lexer.rs  lib.rs  macros.rs  module_resolver.rs  parse.rs  parser.rs  safety_attributes.rs  semantic.rs  span.rs  stream_test.rs  syntax.rs  typeck.rs  types.rs
crates/skalp-frontend/tests/: generic_tests.rs  hir_builder_regression.rs  integration_tests.rs  intent_tests.rs  module_tests.rs  parser_regression.rs  test_const_evaluation.rs  test_constraint_extraction.rs  trait_tests.rs
crates/skalp-incremental/: Cargo.toml
crates/skalp-incremental/src/: builder.rs  cache.rs  dependencies.rs  fingerprint.rs  lib.rs
crates/skalp-lint/: Cargo.toml
crates/skalp-lint/src/: lib.rs
crates/skalp-lir/: Cargo.toml
crates/skalp-lir/examples/: synthesis_example.rs
crates/skalp-lir/src/: async_sta.rs  async_sta_fix.rs  builtin_libraries.rs  compiled_ip.rs  fp32_decompose.rs  gate_lut_opt.rs  gate_netlist.rs  gate_optimization.rs  gate_optimizer.rs  hierarchical_netlist.rs  lib.rs  lir.rs  mir_to_gate_netlist.rs  mir_to_lir.rs  mir_to_word_lir.rs  ncl_dual_rail.rs  ncl_expand.rs  ncl_optimizer.rs  netlist.rs  optimization.rs  pattern_detector.rs  pipeline_annotations.rs  primitives.rs  signal_trace.rs  tech_library.rs  tech_mapper.rs  tech_mapping.rs  technology.rs  technology_mapping.rs  timing.rs  word_lir.rs
crates/skalp-lir/tests/: lir_tests.rs  mir_to_lir_regression.rs
crates/skalp-lsp/: Cargo.toml
crates/skalp-lsp/src/: analysis.rs  completion.rs  diagnostics.rs  expression_circuit.rs  hover.rs  lib.rs  main.rs  schematic.rs  semantic_tokens.rs  symbols.rs
crates/skalp-manifest/: Cargo.toml
crates/skalp-manifest/src/: dependency.rs  error.rs  lib.rs  manifest.rs
crates/skalp-manifest/tests/: integration_tests.rs  test_overrides.rs
crates/skalp-ml/: Cargo.toml
crates/skalp-ml/src/: features.rs  lib.rs  pass_advisor.rs  policy.rs  trainer.rs  training_data.rs
crates/skalp-package/: Cargo.toml
crates/skalp-package/src/: cache.rs  error.rs  lib.rs  lockfile.rs  registry.rs  resolver.rs  source.rs
crates/skalp-parallel/: Cargo.toml
crates/skalp-parallel/src/: dependencies.rs  lib.rs  pipeline.rs  scheduler.rs  tasks.rs  workers.rs
crates/skalp-place-route/: Cargo.toml
crates/skalp-place-route/docs/: nextpnr-comparison.md
crates/skalp-place-route/src/: bitstream.rs  device.rs  error.rs  lib.rs  packing.rs  placer.rs  pnr.rs  router.rs  timing.rs  utils.rs
crates/skalp-place-route/tests/: test_nextpnr_golden.rs  test_pin_constraints.rs  test_qor_benchmark.rs  test_scale.rs
crates/skalp-safety/: Cargo.toml  SAFETY_EVALUATION_REPORT.md  SAFETY_GAPS_AND_ROADMAP.md  SAFETY_ROADMAP.md
crates/skalp-safety/examples/: safety_analysis_demo.rs
crates/skalp-safety/src/: analysis.rs  asil.rs  bist_generation.rs  common_cause.rs  coverage_verification.rs  design_resolver.rs  design_rules.rs  diversity.rs  do254.rs  fault_diagnostics.rs  fault_simulation.rs  fmea.rs  fmeda.rs  fmeda_library.rs  fta.rs  gate_netlist_integration.rs  hierarchy.rs  hsi.rs  iec61508.rs  lib.rs  mechanisms.rs  metrics.rs  pipeline.rs  power_domains.rs  power_infrastructure.rs  requirements.rs  safety_case.rs  safety_driven_fmea.rs  safety_power_verification.rs  seooc.rs  sm_failure_analysis.rs  tool_qualification.rs  traits.rs  uncertainty.rs  workproducts.rs
crates/skalp-sim/: Cargo.toml
crates/skalp-sim/src/: breakpoint.rs  clock_manager.rs  compiled_cpu_runtime.rs  cone.rs  coverage_report.rs  coverage_vecgen.rs  cpp_compiler.rs  cpu_runtime.rs  debug_server.rs  event.rs  gate_eval.rs  gate_netlist_to_sir.rs  gate_runtime.rs  gate_simulator.rs  gpu_aig_cone_sim.rs  gpu_fault_simulator.rs  gpu_gate_runtime.rs  gpu_ncl_runtime.rs  gpu_runtime.rs  lib.rs  lir_to_sir.rs  metal.rs  mir_to_sir.rs  ncl_sim.rs  runtime.rs  shader.rs  sim_coverage.rs  simulator.rs  sir.rs  state.rs  testbench.rs  unified_runtime.rs  waveform.rs
crates/skalp-sim/tests/: comprehensive_tests.rs  comprehensive_tests.rs.disabled
crates/skalp-sir/: Cargo.toml
crates/skalp-testing/: Cargo.toml
crates/skalp-verify/: Cargo.toml
(+812 files in other folders)
