[package]
name = "skalp-backends"
version = "0.1.0"
edition = "2021"
description = "Hardware backends for SKALP - FPGA and ASIC synthesis"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
indexmap = "2.0"
tempfile = "3.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
skalp-lir = { path = "../skalp-lir" }
skalp-mir = { path = "../skalp-mir" }
skalp-frontend = { path = "../skalp-frontend" }
log = "0.4"

[features]
default = ["fpga", "asic"]
fpga = []
asic = []
yosys = ["fpga"]
nextpnr = ["fpga"]
openroad = ["asic"]
