[package]
name = "skalp-codegen"
version = "0.1.0"
edition = "2021"

[dependencies]
skalp-mir = { path = "../skalp-mir" }
skalp-lir = { path = "../skalp-lir" }
skalp-frontend = { path = "../skalp-frontend" }
indoc = "2.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.100"
