[package]
name = "skalp-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.14"
rowan = "0.15"
codespan-reporting = "0.11"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
tracing = "0.1"
stacker = "0.1"

[dev-dependencies]
tempfile = "3.0"