[package]
name = "skalp-lint"
version = "0.1.0"
edition = "2021"
authors = ["SKALP Contributors"]
description = "Linter for SKALP hardware description language"
license = "MIT"

[dependencies]
skalp-frontend = { path = "../skalp-frontend" }
skalp-mir = { path = "../skalp-mir" }
thiserror = "1.0"
indexmap = "2.0"
tracing = "0.1"

[dev-dependencies]
