[package]
name = "skalp-lir"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
bitvec = "1.0"
indexmap = "2.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
skalp-mir = { path = "../skalp-mir" }
skalp-frontend = { path = "../skalp-frontend" }
anyhow = "1.0.100"
rayon = "1.10"

[dev-dependencies]
skalp-frontend = { path = "../skalp-frontend" }
