[package]
name = "skalp-lir"
version = "0.1.0"
edition = "2021"

[dependencies]
petgraph = "0.6"
bitvec = "1.0"
indexmap = { version = "2.0", features = ["serde"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
skalp-mir = { path = "../skalp-mir" }
skalp-frontend = { path = "../skalp-frontend" }
anyhow = "1.0.100"
rayon = "1.10"
bincode = "1.3"
blake3 = "1.5"
aes-gcm = { version = "0.10", optional = true }
rand = { version = "0.8", optional = true }
tracing = "0.1"

[dev-dependencies]
skalp-frontend = { path = "../skalp-frontend" }
tempfile = "3.10"

[features]
default = []
encryption = ["aes-gcm", "rand"]
