[package]
name = "skalp-lsp"
version = "0.1.0"
edition = "2021"
description = "Language Server Protocol implementation for SKALP"

[dependencies]
skalp-frontend = { path = "../skalp-frontend" }
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
ropey = "1.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "skalp-lsp"
path = "src/main.rs"
