[package]
name = "skalp-place-route"
version = "0.1.0"
edition = "2021"
description = "Native FPGA Place and Route for SKALP"

[features]
default = []
programmer = ["libftd2xx"]
hardware-test = ["programmer"]

[dependencies]
skalp-lir = { path = "../skalp-lir" }
skalp-frontend = { path = "../skalp-frontend" }
petgraph = "0.6"
indexmap = "2.0"
thiserror = "1.0"
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
log = "0.4"

# FTDI programmer support (optional)
libftd2xx = { version = "0.32", optional = true }

[dev-dependencies]
# For testing