[package]
name = "skalp-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
skalp-mir = { path = "../skalp-mir" }
petgraph = "0.6"
bitvec = { version = "1.0", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# GPU simulation support (Metal on macOS)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"