[package]
name = "skalp-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
skalp-sir = { path = "../skalp-sir" }
skalp-mir = { path = "../skalp-mir" }
skalp-lir = { path = "../skalp-lir" }
skalp-frontend = { path = "../skalp-frontend" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Data handling
bytemuck = "1.14"
zerocopy = "0.7"
bitvec = { version = "1.0", features = ["serde"] }
petgraph = "0.6"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
indexmap = { version = "2.0", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Metal GPU support (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"
cocoa-foundation = "0.1"
core-graphics-types = "0.1"