[package]
name = "skalp-sir"
version = "0.1.0"
edition = "2021"

[dependencies]
skalp-mir = { path = "../skalp-mir" }
skalp-frontend = { path = "../skalp-frontend" }
thiserror = "1.0"

# Metal GPU support (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"
cocoa-foundation = "0.1"