[package]
name = "skalp-sir"
version = "0.2.0"
edition = "2021"

[dependencies]
skalp-mir = { path = "../skalp-mir" }
skalp-frontend = { path = "../skalp-frontend" }
thiserror = "1.0"
stacker = "0.1"
serde = { version = "1.0", features = ["derive"] }

# Metal GPU support (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"
cocoa-foundation = "0.1"